--- a/Source/Help/DocFX/articles/toc.yml
+++ b/Source/Help/DocFX/articles/toc.yml
@@ -11,6 +11,8 @@
       href: Toolkit/ButtonSpec.md
     - name: Palettes
       href: palettes.md
+    - name: Custom Controls
+      href: Krypton_CustomControls.md
 - name: Toolkit
   href: Krypton_Toolkit.md
   items:
