--- a/Source/Help/Output/manifest.json
+++ b/Source/Help/Output/manifest.json
@@ -33,6 +33,16 @@
       "version": ""
     },
     {
+      "type": "Conceptual",
+      "source_relative_path": "articles/CustomControls/UsingPaletteBase.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/CustomControls/UsingPaletteBase.html"
+        }
+      },
+      "version": ""
+    },
+    {
       "type": "Resource",
       "source_relative_path": "articles/Docking/DockC5.png",
       "output": {
@@ -208,6 +218,16 @@
       "output": {
         ".html": {
           "relative_path": "articles/Embedding Palette Definitions.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Krypton_CustomControls.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Krypton_CustomControls.html"
         }
       },
       "version": ""
