--- a/Source/Help/Output/manifest.json
+++ b/Source/Help/Output/manifest.json
@@ -843,6 +843,136 @@
       "version": ""
     },
     {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Ribbon/ButtonSpecs.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Ribbon/ButtonSpecs.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Ribbon/ControlEvents.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Ribbon/ControlEvents.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Ribbon/ItemEvents.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Ribbon/ItemEvents.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Ribbon/KryptonGallery.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Ribbon/KryptonGallery.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Ribbon/KryptonRibbonApplicationButton.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Ribbon/KryptonRibbonApplicationButton.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Ribbon/KryptonRibbonContextualTabs.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Ribbon/KryptonRibbonContextualTabs.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Ribbon/KryptonRibbonGroupContainers.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Ribbon/KryptonRibbonGroupContainers.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Ribbon/KryptonRibbonGroupItems.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Ribbon/KryptonRibbonGroupItems.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Ribbon/KryptonRibbonGroups.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Ribbon/KryptonRibbonGroups.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Ribbon/KryptonRibbonKeyTipsAndKeyboardAccess.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Ribbon/KryptonRibbonKeyTipsAndKeyboardAccess.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Ribbon/KryptonRibbonOverview.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Ribbon/KryptonRibbonOverview.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Ribbon/KryptonRibbonQuickAccessToolbar.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Ribbon/KryptonRibbonQuickAccessToolbar.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Ribbon/KryptonRibbonTabs.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Ribbon/KryptonRibbonTabs.html"
+        }
+      },
+      "version": ""
+    },
+    {
       "type": "Resource",
       "source_relative_path": "articles/Ribbon/RIbbonContextProps.png",
       "output": {
