* Start to update images

--- a/Source/Help/Output/manifest.json
+++ b/Source/Help/Output/manifest.json
@@ -3743,6 +3743,16 @@
       "version": ""
     },
     {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Tutorials/Allowing for Longer Path and File Names.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Tutorials/Allowing for Longer Path and File Names.html"
+        }
+      },
+      "version": ""
+    },
+    {
       "type": "Resource",
       "source_relative_path": "articles/Tutorials/DockTutorial1.png",
       "output": {
@@ -3798,6 +3808,36 @@
       "output": {
         ".html": {
           "relative_path": "articles/Tutorials/Expanding HeaderGroups Stack.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Tutorials/How to Build the Krypton Toolkit.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Tutorials/How to Build the Krypton Toolkit.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "articles/Tutorials/Images/Allowing Longer File Names/Enable Win32 Long Paths.png",
+      "output": {
+        "resource": {
+          "relative_path": "articles/Tutorials/Images/Allowing Longer File Names/Enable Win32 Long Paths.png"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "articles/Tutorials/Images/Allowing Longer File Names/Group Policy Editor.png",
+      "output": {
+        "resource": {
+          "relative_path": "articles/Tutorials/Images/Allowing Longer File Names/Group Policy Editor.png"
         }
       },
       "version": ""
@@ -4443,21 +4483,21 @@
       "version": ""
     },
     {
-      "type": "Conceptual",
-      "source_relative_path": "articles/Tutorials/Three Pane Application.md",
+      "type": "Resource",
+      "source_relative_path": "articles/Tutorials/Normal WinForm Form.png",
       "output": {
-        ".html": {
-          "relative_path": "articles/Tutorials/Three Pane Application.html"
+        "resource": {
+          "relative_path": "articles/Tutorials/Normal WinForm Form.png"
         }
       },
       "version": ""
     },
     {
-      "type": "Resource",
-      "source_relative_path": "articles/Tutorials/ThreePane1.png",
+      "type": "Conceptual",
+      "source_relative_path": "articles/Tutorials/Three Pane Application.md",
       "output": {
-        "resource": {
-          "relative_path": "articles/Tutorials/ThreePane1.png"
+        ".html": {
+          "relative_path": "articles/Tutorials/Three Pane Application.html"
         }
       },
       "version": ""
@@ -4738,6 +4778,16 @@
       "output": {
         ".html": {
           "relative_path": "articles/Tutorials/Using Images With Buttons.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Tutorials/Using Krypton in Visual Studio 2022 (Old).md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Tutorials/Using Krypton in Visual Studio 2022 (Old).html"
         }
       },
       "version": ""
@@ -6358,6 +6408,16 @@
       "output": {
         "resource": {
           "relative_path": "articles/images/MultiCheck8.png"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "articles/images/New/Normal WinForm Form.png",
+      "output": {
+        "resource": {
+          "relative_path": "articles/images/New/Normal WinForm Form.png"
         }
       },
       "version": ""
