--- a/Source/Help/DocFX/articles/toc.yml
+++ b/Source/Help/DocFX/articles/toc.yml
@@ -170,7 +170,7 @@
      - name: Controls Events
        href: Docking/Krypton Docking Controls Events.md
      - name: Drag & Drop Events
-       href: Docking/Krypton Docking Drag & Drop.md
+       href: Docking/Krypton Docking Drag and Drop.md
 - name: Page Dragging
   href: Page_Dragging.md
   items:
