--- a/Source/Help/Output/manifest.json
+++ b/Source/Help/Output/manifest.json
@@ -244,10 +244,10 @@
     },
     {
       "type": "Conceptual",
-      "source_relative_path": "articles/Docking/Krypton Docking Drag & Drop.md",
+      "source_relative_path": "articles/Docking/Krypton Docking Drag and Drop.md",
       "output": {
         ".html": {
-          "relative_path": "articles/Docking/Krypton Docking Drag & Drop.html"
+          "relative_path": "articles/Docking/Krypton Docking Drag and Drop.html"
         }
       },
       "version": ""
