--- a/Source/Help/DocFX/articles/toc.yml
+++ b/Source/Help/DocFX/articles/toc.yml
@@ -206,6 +206,18 @@
       href: Tutorials/Expanding HeaderGroups Stack.md
     - name: User Page Creation
       href: Tutorials/User Page Creation.md
-#- name: Workspace
-#  href: Krypton_WorkSpace.md
-#  items:
+- name: Contributing
+  href: Contributing.md
+  items:
+    - name: Allowing for Longer Path and File Names
+      href: Contributing/Allowing-for-Longer-Path-and-File-Names.md
+    - name: Contributing Guidelines
+      href: Contributing/Contributing-Guidelines.md
+    - name: Enable Preview SDKs
+      href: Contributing/Enable-Preview-SDK.md
+    - name: How to Create a Pull Request
+      href: Contributing/How-to-Create-a-Pull-Request.md
+    - name: How to Create the API Reference
+      href: Contributing/How-to-Create-the-API-Reference.md
+    - name: How to Manage 'Using' Statements
+      href: Contributing/How-to-Manage-Using-Statements.md
