--- a/Source/Help/Output/manifest.json
+++ b/Source/Help/Output/manifest.json
@@ -34,6 +34,236 @@
     },
     {
       "type": "Conceptual",
+      "source_relative_path": "articles/Contributing.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Contributing.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "articles/Contributing/Allowing Longer File Names/Enable Win32 Long Paths.png",
+      "output": {
+        "resource": {
+          "relative_path": "articles/Contributing/Allowing Longer File Names/Enable Win32 Long Paths.png"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "articles/Contributing/Allowing Longer File Names/Group Policy Editor.png",
+      "output": {
+        "resource": {
+          "relative_path": "articles/Contributing/Allowing Longer File Names/Group Policy Editor.png"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Contributing/Allowing-for-Longer-Path-and-File-Names.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Contributing/Allowing-for-Longer-Path-and-File-Names.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Contributing/Contributing-Guidelines.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Contributing/Contributing-Guidelines.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Contributing/Designer-Fix.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Contributing/Designer-Fix.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Contributing/Enable-Preview-SDK.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Contributing/Enable-Preview-SDK.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Contributing/How-to-Build.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Contributing/How-to-Build.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Contributing/How-to-Create-a-Pull-Request.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Contributing/How-to-Create-a-Pull-Request.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Contributing/How-to-Create-the-API-Reference.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Contributing/How-to-Create-the-API-Reference.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Contributing/How-to-Manage-Using-Statements.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Contributing/How-to-Manage-Using-Statements.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Contributing/IPalette-Removal.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Contributing/IPalette-Removal.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Contributing/Insalling-Krypton.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Contributing/Insalling-Krypton.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "articles/Contributing/Making a Pull Request/Build Log Example.png",
+      "output": {
+        "resource": {
+          "relative_path": "articles/Contributing/Making a Pull Request/Build Log Example.png"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "articles/Contributing/Making a Pull Request/Step 1.png",
+      "output": {
+        "resource": {
+          "relative_path": "articles/Contributing/Making a Pull Request/Step 1.png"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "articles/Contributing/Making a Pull Request/Step 2.png",
+      "output": {
+        "resource": {
+          "relative_path": "articles/Contributing/Making a Pull Request/Step 2.png"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "articles/Contributing/Making a Pull Request/Step 3a.png",
+      "output": {
+        "resource": {
+          "relative_path": "articles/Contributing/Making a Pull Request/Step 3a.png"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "articles/Contributing/Making a Pull Request/Step 3b.png",
+      "output": {
+        "resource": {
+          "relative_path": "articles/Contributing/Making a Pull Request/Step 3b.png"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "articles/Contributing/Making a Pull Request/Step 4.png",
+      "output": {
+        "resource": {
+          "relative_path": "articles/Contributing/Making a Pull Request/Step 4.png"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "articles/Contributing/Making a Pull Request/Step 5.png",
+      "output": {
+        "resource": {
+          "relative_path": "articles/Contributing/Making a Pull Request/Step 5.png"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "articles/Contributing/Making a Pull Request/Step 6.png",
+      "output": {
+        "resource": {
+          "relative_path": "articles/Contributing/Making a Pull Request/Step 6.png"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "articles/Contributing/Making a Pull Request/Step 7.png",
+      "output": {
+        "resource": {
+          "relative_path": "articles/Contributing/Making a Pull Request/Step 7.png"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Contributing/Package-Support-Information.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Contributing/Package-Support-Information.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
       "source_relative_path": "articles/Custom Controls/UsingPaletteBase.md",
       "output": {
         ".html": {
