--- a/Source/Help/DocFX/articles/toc.yml
+++ b/Source/Help/DocFX/articles/toc.yml
@@ -221,3 +221,14 @@
       href: Contributing/How-to-Create-the-API-Reference.md
     - name: How to Manage 'Using' Statements
       href: Contributing/How-to-Manage-Using-Statements.md
+- name: Support
+  href: Support.md
+  items:
+    - name: Using Krypton in Visual Studio 2022
+      href: Tutorials/Using Krypton in Visual Studio 2022.md
+    - name: Designer Fixes with .NET
+      href: Support/Designer Fix.md
+    - name: Removal of IPalette
+      href: Support/IPalette Removal.md
+    - name: Package Support Information
+      href: Support/Package Support Information.md
