--- a/Source/Help/Output/manifest.json
+++ b/Source/Help/Output/manifest.json
@@ -84,16 +84,6 @@
     },
     {
       "type": "Conceptual",
-      "source_relative_path": "articles/Contributing/Designer-Fix.md",
-      "output": {
-        ".html": {
-          "relative_path": "articles/Contributing/Designer-Fix.html"
-        }
-      },
-      "version": ""
-    },
-    {
-      "type": "Conceptual",
       "source_relative_path": "articles/Contributing/Enable-Preview-SDK.md",
       "output": {
         ".html": {
@@ -138,26 +128,6 @@
       "output": {
         ".html": {
           "relative_path": "articles/Contributing/How-to-Manage-Using-Statements.html"
-        }
-      },
-      "version": ""
-    },
-    {
-      "type": "Conceptual",
-      "source_relative_path": "articles/Contributing/IPalette-Removal.md",
-      "output": {
-        ".html": {
-          "relative_path": "articles/Contributing/IPalette-Removal.html"
-        }
-      },
-      "version": ""
-    },
-    {
-      "type": "Conceptual",
-      "source_relative_path": "articles/Contributing/Insalling-Krypton.md",
-      "output": {
-        ".html": {
-          "relative_path": "articles/Contributing/Insalling-Krypton.html"
         }
       },
       "version": ""
@@ -248,16 +218,6 @@
       "output": {
         "resource": {
           "relative_path": "articles/Contributing/Making a Pull Request/Step 7.png"
-        }
-      },
-      "version": ""
-    },
-    {
-      "type": "Conceptual",
-      "source_relative_path": "articles/Contributing/Package-Support-Information.md",
-      "output": {
-        ".html": {
-          "relative_path": "articles/Contributing/Package-Support-Information.html"
         }
       },
       "version": ""
@@ -2908,6 +2868,56 @@
       "output": {
         "resource": {
           "relative_path": "articles/Ribbon/RibbonVisualsProps.png"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Support.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Support.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Support/Designer Fix.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Support/Designer Fix.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Support/IPalette Removal.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Support/IPalette Removal.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Support/Insalling-Krypton.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Support/Insalling-Krypton.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Support/Package Support Information.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Support/Package Support Information.html"
         }
       },
       "version": ""
