* How to build documentation

--- a/Source/Help/DocFX/articles/toc.yml
+++ b/Source/Help/DocFX/articles/toc.yml
@@ -215,6 +215,8 @@
       href: Contributing/Contributing-Guidelines.md
     - name: Enable Preview SDKs
       href: Contributing/Enable-Preview-SDK.md
+    - name: How to Build the Standard Toolkit
+      href: Contributing/How-to-Build.md
     - name: How to Create a Pull Request
       href: Contributing/How-to-Create-a-Pull-Request.md
     - name: How to Create the API Reference
