* Update Tutorials landing page

--- a/Source/Help/Output/manifest.json
+++ b/Source/Help/Output/manifest.json
@@ -4454,10 +4454,30 @@
     },
     {
       "type": "Resource",
+      "source_relative_path": "articles/Tutorials/Images/Expanding HeaderGroups DockStyle/ExpandingDockStyle.png",
+      "output": {
+        "resource": {
+          "relative_path": "articles/Tutorials/Images/Expanding HeaderGroups DockStyle/ExpandingDockStyle.png"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Resource",
       "source_relative_path": "articles/Tutorials/Images/Expanding HeaderGroups Splitters/Expanding35.png",
       "output": {
         "resource": {
           "relative_path": "articles/Tutorials/Images/Expanding HeaderGroups Splitters/Expanding35.png"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "articles/Tutorials/Images/Expanding HeaderGroups Splitters/Expanding41.png",
+      "output": {
+        "resource": {
+          "relative_path": "articles/Tutorials/Images/Expanding HeaderGroups Splitters/Expanding41.png"
         }
       },
       "version": ""
@@ -4694,6 +4714,16 @@
     },
     {
       "type": "Resource",
+      "source_relative_path": "articles/Tutorials/Images/Expanding HeaderGroups Stack/TutorialStack18.png",
+      "output": {
+        "resource": {
+          "relative_path": "articles/Tutorials/Images/Expanding HeaderGroups Stack/TutorialStack18.png"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Resource",
       "source_relative_path": "articles/Tutorials/Images/Three Pane Application/ThreePane21.png",
       "output": {
         "resource": {
@@ -4758,6 +4788,16 @@
       "output": {
         "resource": {
           "relative_path": "articles/Tutorials/Images/Three Pane Application/ThreePane32.png"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "articles/Tutorials/Images/Three Pane Application/ThreePane40.png",
+      "output": {
+        "resource": {
+          "relative_path": "articles/Tutorials/Images/Three Pane Application/ThreePane40.png"
         }
       },
       "version": ""
