--- a/Source/Help/DocFX/articles/toc.yml
+++ b/Source/Help/DocFX/articles/toc.yml
@@ -184,7 +184,9 @@
   href: Krypton_CustomControls.md
   items:
     - name: Using PaletteBase
-      href: Custom Controls/UsingPaletteBase.md  
+      href: Custom Controls/Using PaletteBase.md  
+    - name: Using IRenderer
+      href: Custom Controls/Using IRenderer.md
 - name: Tutorials
   href: Tutorials.md
   items:
