--- a/Source/Help/Output/manifest.json
+++ b/Source/Help/Output/manifest.json
@@ -224,10 +224,20 @@
     },
     {
       "type": "Conceptual",
-      "source_relative_path": "articles/Custom Controls/UsingPaletteBase.md",
+      "source_relative_path": "articles/Custom Controls/Using IRenderer.md",
       "output": {
         ".html": {
-          "relative_path": "articles/Custom Controls/UsingPaletteBase.html"
+          "relative_path": "articles/Custom Controls/Using IRenderer.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Custom Controls/Using PaletteBase.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Custom Controls/Using PaletteBase.html"
         }
       },
       "version": ""
