--- a/Source/Help/Output/manifest.json
+++ b/Source/Help/Output/manifest.json
@@ -524,6 +524,16 @@
     },
     {
       "type": "Conceptual",
+      "source_relative_path": "articles/Getting Started.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Getting Started.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
       "source_relative_path": "articles/Krypton_CustomControls.md",
       "output": {
         ".html": {
