--- a/Source/Help/DocFX/articles/toc.yml
+++ b/Source/Help/DocFX/articles/toc.yml
@@ -227,6 +227,8 @@
       href: Contributing/How-to-Create-the-API-Reference.md
     - name: How to Manage 'Using' Statements
       href: Contributing/How-to-Manage-Using-Statements.md
+    - name: Using the MSBuild Log Viewer
+      href: Contributing/Using the MSBuild Log Viewer.md
 - name: Support
   href: Support.md
   items:
