--- a/Source/Help/Output/manifest.json
+++ b/Source/Help/Output/manifest.json
@@ -224,6 +224,16 @@
     },
     {
       "type": "Conceptual",
+      "source_relative_path": "articles/Contributing/Using the MSBuild Log Viewer.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Contributing/Using the MSBuild Log Viewer.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
       "source_relative_path": "articles/Custom Controls/Using IRenderer.md",
       "output": {
         ".html": {
