--- a/Source/Help/Output/manifest.json
+++ b/Source/Help/Output/manifest.json
@@ -4034,6 +4034,16 @@
     },
     {
       "type": "Conceptual",
+      "source_relative_path": "articles/Toolkit/KryptonListView.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Toolkit/KryptonListView.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
       "source_relative_path": "articles/Toolkit/KryptonManager.md",
       "output": {
         ".html": {
