* More doc updates & redirects

--- a/Source/Help/DocFX/articles/toc.yml
+++ b/Source/Help/DocFX/articles/toc.yml
@@ -232,11 +232,15 @@
 - name: Support
   href: Support.md
   items:
+    - name: How to Install Pre Release Packages
+      href: Support/How to Install Pre Release Packages.md
     - name: Using Krypton in Visual Studio 2022
       href: Tutorials/Using Krypton in Visual Studio 2022.md
     - name: Designer Fixes with .NET
       href: Support/Designer Fix.md
     - name: Removal of IPalette
       href: Support/IPalette Removal.md
+    - name: Krypton Toolkit Suite Standard Modules
+      href: Support/Krypton Toolkit Suite Standard Modules.md
     - name: Package Support Information
       href: Support/Package Support Information.md
