--- a/Source/Help/Output/manifest.json
+++ b/Source/Help/Output/manifest.json
@@ -2924,6 +2924,16 @@
     },
     {
       "type": "Conceptual",
+      "source_relative_path": "articles/Support/How to Install Pre Release Packages.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Support/How to Install Pre Release Packages.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
       "source_relative_path": "articles/Support/IPalette Removal.md",
       "output": {
         ".html": {
@@ -2934,10 +2944,20 @@
     },
     {
       "type": "Conceptual",
-      "source_relative_path": "articles/Support/Insalling-Krypton.md",
+      "source_relative_path": "articles/Support/Insalling Krypton.md",
       "output": {
         ".html": {
-          "relative_path": "articles/Support/Insalling-Krypton.html"
+          "relative_path": "articles/Support/Insalling Krypton.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Support/Krypton Toolkit Suite Standard Modules.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Support/Krypton Toolkit Suite Standard Modules.html"
         }
       },
       "version": ""
@@ -2948,6 +2968,16 @@
       "output": {
         ".html": {
           "relative_path": "articles/Support/Package Support Information.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Support/Package Version Descriptions.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Support/Package Version Descriptions.html"
         }
       },
       "version": ""
