--- a/Source/Help/DocFX/toc.yml
+++ b/Source/Help/DocFX/toc.yml
@@ -1,6 +1,6 @@
 - name: Articles
   href: articles/
-  homepage: articles/intro.md
+  homepage: articles/Getting Started.md
 - name: Api Documentation
   href: api/
   homepage: api/index.md
