--- a/Source/Help/Output/manifest.json
+++ b/Source/Help/Output/manifest.json
@@ -23,6 +23,19 @@
       "version": ""
     },
     {
+      "type": "Toc",
+      "source_relative_path": "api/toc.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/toc.html"
+        },
+        ".json": {
+          "relative_path": "api/toc.json"
+        }
+      },
+      "version": ""
+    },
+    {
       "type": "Conceptual",
       "source_relative_path": "articles/Contributing.md",
       "output": {
