--- a/Source/Help/Output/manifest.json
+++ b/Source/Help/Output/manifest.json
@@ -3836,6 +3836,26 @@
       "version": ""
     },
     {
+      "type": "Resource",
+      "source_relative_path": "articles/Toolkit/KryptonFormButtonSpec.png",
+      "output": {
+        "resource": {
+          "relative_path": "articles/Toolkit/KryptonFormButtonSpec.png"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "articles/Toolkit/KryptonFormExtraText.png",
+      "output": {
+        "resource": {
+          "relative_path": "articles/Toolkit/KryptonFormExtraText.png"
+        }
+      },
+      "version": ""
+    },
+    {
       "type": "Conceptual",
       "source_relative_path": "articles/Toolkit/KryptonGroup.md",
       "output": {
@@ -4431,6 +4451,26 @@
       "output": {
         ".html": {
           "relative_path": "articles/Toolkit/KryptonWrapLabel.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "articles/Toolkit/StatusStripMergingFalse.png",
+      "output": {
+        "resource": {
+          "relative_path": "articles/Toolkit/StatusStripMergingFalse.png"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "articles/Toolkit/StatusStripMergingTrue.png",
+      "output": {
+        "resource": {
+          "relative_path": "articles/Toolkit/StatusStripMergingTrue.png"
         }
       },
       "version": ""
