--- a/Source/Help/Output/manifest.json
+++ b/Source/Help/Output/manifest.json
@@ -1,5 +1,5 @@
 {
-  "source_base_path": "D:/Source Code/Krypton/Standard-Toolkit-Online-Help/Source/Help/DocFX",
+  "source_base_path": "D:/Development/Krypton/Standard-Toolkit-Online-Help/Source/Help/DocFX",
   "xrefmap": "xrefmap.yml",
   "files": [
     {
@@ -18,19 +18,6 @@
       "output": {
         ".html": {
           "relative_path": "api/index.html"
-        }
-      },
-      "version": ""
-    },
-    {
-      "type": "Toc",
-      "source_relative_path": "api/toc.yml",
-      "output": {
-        ".html": {
-          "relative_path": "api/toc.html"
-        },
-        ".json": {
-          "relative_path": "api/toc.json"
         }
       },
       "version": ""
@@ -597,10 +584,10 @@
     },
     {
       "type": "Conceptual",
-      "source_relative_path": "articles/Krypton_Workspace.md",
+      "source_relative_path": "articles/Krypton_WorkSpace.md",
       "output": {
         ".html": {
-          "relative_path": "articles/Krypton_Workspace.html"
+          "relative_path": "articles/Krypton_WorkSpace.html"
         }
       },
       "version": ""
@@ -2921,6 +2908,16 @@
       "output": {
         ".html": {
           "relative_path": "articles/Support/Designer Fix.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "articles/Support/DesignerBug.png",
+      "output": {
+        "resource": {
+          "relative_path": "articles/Support/DesignerBug.png"
         }
       },
       "version": ""
