--- a/Source/Help/Output/manifest.json
+++ b/Source/Help/Output/manifest.json
@@ -3253,6 +3253,16 @@
       "version": ""
     },
     {
+      "type": "Resource",
+      "source_relative_path": "articles/Toolkit/KMB.png",
+      "output": {
+        "resource": {
+          "relative_path": "articles/Toolkit/KMB.png"
+        }
+      },
+      "version": ""
+    },
+    {
       "type": "Conceptual",
       "source_relative_path": "articles/Toolkit/KryptonBorderEdge.md",
       "output": {
@@ -3988,6 +3998,16 @@
       "output": {
         ".html": {
           "relative_path": "articles/Toolkit/KryptonInputBox.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "articles/Toolkit/KryptonInputBox.png",
+      "output": {
+        "resource": {
+          "relative_path": "articles/Toolkit/KryptonInputBox.png"
         }
       },
       "version": ""
@@ -6898,16 +6918,6 @@
       "output": {
         "resource": {
           "relative_path": "articles/images/KCMMC.png"
-        }
-      },
-      "version": ""
-    },
-    {
-      "type": "Resource",
-      "source_relative_path": "articles/images/KMB.png",
-      "output": {
-        "resource": {
-          "relative_path": "articles/images/KMB.png"
         }
       },
       "version": ""
