--- a/Source/Help/DocFX/articles/toc.yml
+++ b/Source/Help/DocFX/articles/toc.yml
@@ -66,26 +66,50 @@
           href: Toolkit/KryptonMonthCalendar.md
         - name: KryptonNumericUpDown
           href: Toolkit/KryptonNumericUpDown.md
+        - name: KryptonOutlookGrid
+          href: Toolkit/KryptonOutlookGrid.md
         - name: KryptonPanel
           href: Toolkit/KryptonPanel.md
+        - name: KryptonPictureBox
+          href: Toolkit/KryptonPictureBox.md
+        - name: KryptonProgressBar
+          href: Toolkit/KryptonProgressBar.md
+        - name: KryptonPropertyGrid
+          href: Toolkit/KryptonPropertyGrid.md
         - name: KryptonRadioButton
           href: Toolkit/KryptonRadioButton.md
         - name: KryptonRichTextBox
           href: Toolkit/KryptonRichTextBox.md
+        - name: KryptonScrollBar
+          href: Toolkit/KryptonScrollBar.md
         - name: KryptonSeparator
           href: Toolkit/KryptonSeparator.md
         - name: KryptonSplitContainer
           href: Toolkit/KryptonSplitContainer.md
+        - name: KryptonStatusStrip
+          href: Toolkit/KryptonStatusStrip.md
+        - name: KryptonTableLayoutPanel
+          href: Toolkit/KryptonTableLayoutPanel.md
         - name: KryptonTextBox
           href: Toolkit/KryptonTextBox.md
+        - name: KryptonThemeComboBox
+          href: Toolkit/KryptonThemeComboBox.md
+        - name: KryptonThemeListBox
+          href: Toolkit/KryptonThemeListBox.md
+        - name: KryptonToolStrip
+          href: Toolkit/KryptonToolStrip.md
         - name: KryptonTrackBar
           href: Toolkit/KryptonTrackBar.md
         - name: KryptonTreeView 
           href: Toolkit/KryptonTreeView.md
+        - name: KryptonWebBrowser
+          href: Toolkit/KryptonWebBrowser.md
         - name: KryptonWrapLabel
           href: Toolkit/KryptonWrapLabel.md
     - name: Components
       items:
+        - name: KryptonAboutBox
+          href: Toolkit/KryptonAboutBox.md
         - name: KryptonCheckSet
           href: Toolkit/KryptonCheckSet.md
         - name: KryptonCommand
@@ -94,6 +118,10 @@
           href: Toolkit/KryptonContextMenu.md
         - name: KryptonCustomPaletteBase
           href: Toolkit/KryptonCustomPaletteBase.md
+        - name: KryptonColorDialog
+          href: Toolkit/KryptonColorDialog.md
+        - name: KryptonFolderBrowserDialog
+          href: Toolkit/KryptonFolderBrowserDialog.md
         - name: KryptonFontDialog
           href: Toolkit/KryptonFontDialog.md
         - name: KryptonInputBox
@@ -102,8 +130,18 @@
           href: Toolkit/KryptonManager.md
         - name: KryptonMessageBox
           href: Toolkit/KryptonMessageBox.md
+        - name: KryptonOpenFileDialog
+          href: Toolkit/KryptonOpenFileDialog.md
+        - name: KryptonPrintDialog
+          href: Toolkit/KryptonPrintDialog.md
+        - name: KryptonSaveFileDialog
+          href: Toolkit/KryptonSaveFileDialog.md
         - name: KryptonTaskDialog
           href: Toolkit/KryptonTaskDialog.md
+        - name: KryptonThemeBrowser
+          href: Toolkit/KryptonThemeBrowser.md
+        - name: KryptonToastNotification
+          href: Toolkit/KryptonToastNotification.md
     - name: Forms
       items:
         - name: KryptonForm
