--- a/Source/Help/Output/manifest.json
+++ b/Source/Help/Output/manifest.json
@@ -3264,6 +3264,16 @@
     },
     {
       "type": "Conceptual",
+      "source_relative_path": "articles/Toolkit/KryptonAboutBox.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Toolkit/KryptonAboutBox.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
       "source_relative_path": "articles/Toolkit/KryptonBorderEdge.md",
       "output": {
         ".html": {
@@ -4264,6 +4274,16 @@
     },
     {
       "type": "Conceptual",
+      "source_relative_path": "articles/Toolkit/KryptonPictureBox.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Toolkit/KryptonPictureBox.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
       "source_relative_path": "articles/Toolkit/KryptonPrintDialog.md",
       "output": {
         ".html": {
@@ -4358,6 +4378,16 @@
       "output": {
         ".html": {
           "relative_path": "articles/Toolkit/KryptonStatusStrip.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Toolkit/KryptonTableLayoutPanel.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Toolkit/KryptonTableLayoutPanel.html"
         }
       },
       "version": ""
